--- a/Assignment3/part2/style.css
+++ b/Assignment3/part2/style.css
@@ -1,5 +1,13 @@
+/**
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: style.css
+	Date: 21 February 2024
+	Description: With the help of CSS, I've created a cool looking box. I've Utilized different functions of CSS to create this one
+               and applying that an index file.
+	**/
+
+
 html {
   font-family: sans-serif;
 }
 
-/* Your CSS below here */
