--- a/Assignment3/part2/style.css
+++ b/Assignment3/part2/style.css
@@ -11,3 +11,11 @@ html {
   font-family: sans-serif;
 }
 
+div {
+  
+  /* placing and sizing */
+  width: 200px
+  margin- auto;  
+  line-height: 9;
+
+}
