added text attributes
Set the font size and its value in rems

--- a/Assignment3/part2/style.css
+++ b/Assignment3/part2/style.css
@@ -12,10 +12,14 @@ html {
 }
 
 div {
-  
+
   /* placing and sizing */
   width: 200px
   margin- auto;  
   line-height: 9;
 
+  /* text */
+  font-size: 1.125rem;
+  /* 18 px = 1.125rem */
+  
 }
