Gave shadow to the text
I've gave the text shadow, and set the radius.

--- a/Assignment3/part2/style.css
+++ b/Assignment3/part2/style.css
@@ -28,5 +28,6 @@ div {
   /* choose a text color that suites the background and aligned 
      the text to centre */
 
-
+  text-shadow: 1px 1px 1px black;
+  /* added text shadow and its radius */
 }
