--- a/Assignment3/part2/style.css
+++ b/Assignment3/part2/style.css
@@ -30,4 +30,8 @@ div {
 
   text-shadow: 1px 1px 1px black;
   /* added text shadow and its radius */
+
+  /* border */
+  border-radius: 10px;
+  border: 1px solid #990000;
 }
