Added background effects
Using the background-color and background-image tags, I've made changes to the background color. Also, using the rgba I've varied the opacity of the color to give it a gradient look. Also added a height parameter in the beginning of the div.

--- a/Assignment3/part2/style.css
+++ b/Assignment3/part2/style.css
@@ -14,8 +14,9 @@ html {
 div {
 
   /* placing and sizing */
-  width: 200px
-  margin- auto;  
+  width: 200px;
+  height: 200px;
+  margin: auto;
   line-height: 9;
 
   /* text */
@@ -34,4 +35,15 @@ div {
   /* border */
   border-radius: 10px;
   border: 1px solid #990000;
+
+  /* background effects */
+  background-color: red;
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+
+
 }
