--- a/Assignment3/part3/style.css
+++ b/Assignment3/part3/style.css
@@ -49,3 +49,30 @@ header, footer {
   border-bottom: 5px solid #a66;
 }
 
+
+@font-face {
+  font-family: 'cantata_oneregular';
+  src: url('cantataone-regular-webfont.woff2') format('woff2'),
+       url('cantataone-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'open_sansbold';
+  src: url('opensans-bold-webfont.woff2') format('woff2'),
+       url('opensans-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+html {
+  font-family: 'cantata_oneregular', serif;
+  font-size: 10px;
+}
+
+h1, h2, h3 {
+  font-family: 'open_sansbold', sans-serif;
+}
