--- a/Assignment3/part3/style.css
+++ b/Assignment3/part3/style.css
@@ -120,3 +120,11 @@ a:focus, a:hover {
   text-decoration: none;
 }
 
+/* designing the links */
+a:active {
+  color: transparent;
+  text-shadow: 0px 0px 1px #26d8d8,
+               0px 0px 2px #26d8d8,
+               0px 0px 3px black,
+               0px 0px 4px black;
+}
