--- a/Assignment3/part3/style.css
+++ b/Assignment3/part3/style.css
@@ -128,3 +128,17 @@ a:active {
                0px 0px 3px black,
                0px 0px 4px black;
 }
+
+/* editing the list */
+
+ul, ol {
+  margin: 1.6rem 0;
+}
+
+ul {
+  list-style-type: square;
+}
+
+ol {
+  list-style-type: lower-latin;
+}
