--- a/Assignment3/part3/style.css
+++ b/Assignment3/part3/style.css
@@ -94,6 +94,13 @@ section h2 + p {
   text-indent: 20px;
 }
 
+p, li {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  word-spacing: 3px;
+}
+
 /* styling the link */
 
 a {
