--- a/Assignment3/part4/styles.css
+++ b/Assignment3/part4/styles.css
@@ -1,3 +1,11 @@
+/*
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: style.css
+	Date: 23 February 2024
+	Description: Using some raw html, basic CSS and images, i've designing a blog post page.
+               Basic of CSS are using to create the layout.
+	*/
+
 body {
     background-color: #fff;
     color: #333;
