--- a/Assignment3/part4/styles.css
+++ b/Assignment3/part4/styles.css
@@ -45,6 +45,8 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    justify-content: space-between;
   }
   
   nav a {
