Added border radius
For the navigation bar menu I've added a little curve to the edges.

--- a/Assignment3/part3/style.css
+++ b/Assignment3/part3/style.css
@@ -170,6 +170,7 @@ nav li a {
   text-align: center;
   font-size: 2.5rem;
   border: 1px solid #a66;
+  border-radius: 5px;
 }
 
 nav li a:focus, nav li a:hover {
