--- a/Assignment4/part3/style.css
+++ b/Assignment4/part3/style.css
@@ -1,3 +1,10 @@
+/**
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: style.css
+	Date: 20 March, 2024
+	Description: Using Javascript creating some bouncing balls, exploring different properties of the language.
+**/
+
 html, body {
   margin: 0;
 }
