--- a/Assignment4/part2/style.css
+++ b/Assignment4/part2/style.css
@@ -1,3 +1,10 @@
+/**
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: style.css
+	Date: 20 March, 2024
+	Description: Creating an image gallery and getting more in depth idea about javascript. 
+	-->
+**/
 h1 {
   font-family: helvetica, arial, sans-serif;
   text-align: center;
