--- a/Assignment5/part1/style.css
+++ b/Assignment5/part1/style.css
@@ -1,3 +1,10 @@
+/*
+Name: Adarsh Thekkekulathingal Kuriyachan
+Date: 15 - 04 - 2024
+File: style.html
+Description: Main aim is to dive into the world of accessibility and fixing the issues in the code.
+*/
+
 /* || General setup */
 
 html, body {
