--- a/Assignment5/part1/style.css
+++ b/Assignment5/part1/style.css
@@ -58,8 +58,8 @@ p, li, table {
 
 /* || header layout */
 
-div[class="nav"], article, footer, .secondary {
-  background-color: green;
+nav, article, footer, .secondary {
+  background-color: white;
 }
 
 article, footer, .secondary {
