Updating navigation style
Updated navigation styling with a flex display and background color adjustment.

--- a/Assignment5/part1/style.css
+++ b/Assignment5/part1/style.css
@@ -69,8 +69,8 @@ article, footer, .secondary {
 article {
   margin-right: 10px;
 }
-
-div[class="nav"] {
+  
+  nav {
   height: 50px;
   background-color: ff80ff;
   display: flex;
