--- a/Assignment5/part1/style.css
+++ b/Assignment5/part1/style.css
@@ -70,7 +70,7 @@ article {
   margin-right: 10px;
 }
   
-  nav {
+nav {
   height: 50px;
   background-color: ff80ff;
   display: flex;
@@ -78,14 +78,14 @@ article {
   margin-bottom: 10px;
 }
 
-div[class="nav"] ul {
+nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-div[class="nav"] li {
+ nav li {
   display: inline;
   text-align: center;
   flex: 1;
