Applied inline-block display and uppercase text
Applied inline-block display and uppercase text transformation to navigation links for enhanced styling and visibility.

--- a/Assignment5/part1/style.css
+++ b/Assignment5/part1/style.css
@@ -85,13 +85,13 @@ nav ul {
   display: flex;
 }
 
- nav li {
+nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
 
-div[class="nav"] a {
+nav a {
   display: inline-block;
   font-size: 2rem;
   text-transform: uppercase;
